components/heptagon/test/bad/flatten.ept

node f(x,y : int; b : bool) returns (z : int)
var t : int;
let
  do
    var t2,t22 : int; in
    t2 = if b then 0 else t22;
    do
      var t3 : int; in
      t3 = y + t;
      t22 = t3;
    done;
    t = x + t2;
  done;
  z = t;
tel

